@@ -66,7 +66,7 @@ For this new addon I changed a few things.
 
 - a Ubuntu 10.04 LTS system or higher. (Test passed on Ubuntu 10.04 LTS). This 
   System can be 32 or 64 bit. 
-- a SVN build of XBMC (at least SVN 31953) or higher.
+- a XBMC System V10.0 or higher.
 - a DVD drive and optionally a Bluray drive if you want to transcode BD-disk
 - a place where you can store rips. Be prepared, ripping DVD and Bluray disks
   can take a very large amount of space (terrabyte disk drive prices are coming
@@ -140,7 +140,7 @@ following message .....
 The EULA-FILE can not be downloaded and therefore you must
 use a SVN release of this addon.
 You do this at you own risk .....
-the last stable public released version was 0.6.15
+the last stable public released version was 0.6.18
 
 press any key to continue or ctrl-c to abort..
 -----------------------------------------------------------------------
